Removed sequelize. (I got ahead of myself and don't actually want to use it for this particular project since that would skip over writing my own ORM.) Finished (?) orm.js, although there exists a definite possibility of realizing I need some additional operations later.

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -18,13 +18,26 @@
         {{!-- Interact with Existing Burgers  --}}
         <div class="col-6">
             <table>
-                {{#each burgers}}
+                {{#each unEatenBurgers}}
                 <tr>
                     <td>
                         {{this.burger}}
                     </td>
                     <td>
                         <button id="eatBurger">Eat Burger</button>
+                    </td>
+                </tr>
+                {{/each}}
+            </table>
+            <hr>
+            <table>
+                {{#each eatenBurgers}}
+                <tr>
+                    <td>
+                        {{this.burger}}
+                    </td>
+                    <td>
+                        <button id="eatBurger" disabled>Eat Burger</button>
                     </td>
                 </tr>
                 {{/each}}
