--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,4 @@
-<h1>Burger Moderation Queue</h1>
+<h1 class=" h1 mx-auto">Burger Moderation Queue</h1>
 <div class="container">
     <div class="row">
 
@@ -8,43 +8,41 @@
             <form>
                 <div class="form-group">
                     <label for="newBurgerIn">Burger</label>
-                    <input type="email" class="form-control" id="newBurgerIn" aria-describedby="NewBurg"
+                    <input type="text" class="form-control" id="newBurgerIn" aria-describedby="NewBurg"
                         placeholder="Double Bacon Cheeseburger">
                     <small id="NewBurg" class="form-text text-muted">What sounds delicious to you?</small>
                 </div>
+                <button type="submit" id="createBurger">Create</button>
             </form>
         </div>
 
         {{!-- Interact with Existing Burgers  --}}
         <div class="col-6">
-            <table>
-                {{#each unEatenBurgers}}
-                <tr>
-                    <td>
-                        {{this.burger}}
-                    </td>
-                    <td>
-                        <button id="eatBurger">Eat Burger</button>
-                    </td>
-                </tr>
-                {{/each}}
-            </table>
+            <h3>View Burgers:</h3>
+            {{#each unEatenBurgers}}
+            <div class="row">
+                <div class="col-4">
+                    {{this.burgerInfo}}
+                </div>
+                <div class="col-2 py-1">
+                    <button class="btn btn-sm btn-success eatBurgerButton" value='{{this.id}}'>Eat Burger</button>
+                </div>
+            </div>
+            {{/each}}
             <hr>
-            <table>
-                {{#each eatenBurgers}}
-                <tr>
-                    <td>
-                        {{this.burger}}
-                    </td>
-                    <td>
-                        <button id="eatBurger" disabled>Eat Burger</button>
-                    </td>
-                </tr>
-                {{/each}}
-            </table>
+            {{#each eatenBurgers}}
+            <div class="row">
+                <div class="col-4">
+                    {{this.burgerInfo}}
+                </div>
+                <div class="col-2 py-1">
+                    <button class=" btn btn-sm btn-secondary eatenBurgerButton" disabled>Eat Burger</button>
+                </div>
+            </div>
+            {{/each}}
         </div>
 
     </div>
 </div>
 
-<script type="text/javascript" src="../public/homePage.js"></script>
+<script src="public/homePage.js" type="text/javascript"></script>
