Added additional styling and font to handlebars pages via bootstrap and style.css. Removed console logs from orm and homePage js files.

--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,14 @@
-h6 {
-    /* do nothing */
+h1, h2, h3 {
+    font-family: 'Mansalva', cursive;
+}
+
+.burgerBox {
+    max-height: 80vh;
+    max-width: 40vw;
+    overflow: auto;
+}
+
+.burgerBox .row {
+    max-width:100%;
+    overflow: hidden;
 }
