--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,45 +1,51 @@
-<h1 class=" h1 mx-auto">Burger Moderation Queue</h1>
 <div class="container">
+    <div class="row justify-content-center">
+        <h1 class="h1">Eat Da Burger!</h1>
+    </div>
+    <div class="row">
+        <hr <hr class="col-12">
+    </div>
     <div class="row">
 
         {{!-- New Burger Input --}}
         <div class="col-6">
-            <h3>Add new Burger:</h3>
+            <h3>Add New Burger:</h3>
             <form>
                 <div class="form-group">
-                    <label for="newBurgerIn">Burger</label>
                     <input type="text" class="form-control" id="newBurgerIn" aria-describedby="NewBurg"
-                        placeholder="Double Bacon Cheeseburger">
+                        placeholder="Double Bacon Cheeseburger" maxlength="50">
                     <small id="NewBurg" class="form-text text-muted">What sounds delicious to you?</small>
                 </div>
-                <button type="submit" id="createBurger">Create</button>
+                <button class="btn btn-warning" type="submit" id="createBurger">Create</button>
             </form>
         </div>
 
         {{!-- Interact with Existing Burgers  --}}
         <div class="col-6">
             <h3>View Burgers:</h3>
-            {{#each unEatenBurgers}}
-            <div class="row">
-                <div class="col-4">
-                    {{this.burgerInfo}}
+            <div class="burgerBox">
+                {{#each unEatenBurgers}}
+                <div class="row">
+                    <div class="col-4">
+                        <p>{{this.burgerInfo}}</p>
+                    </div>
+                    <div class="col-2 py-1">
+                        <button class="btn btn-sm btn-success eatBurgerButton" value='{{this.id}}'>Eat Burger</button>
+                    </div>
                 </div>
-                <div class="col-2 py-1">
-                    <button class="btn btn-sm btn-success eatBurgerButton" value='{{this.id}}'>Eat Burger</button>
+                {{/each}}
+                <hr>
+                {{#each eatenBurgers}}
+                <div class="row">
+                    <div class="col-4">
+                        <p>{{this.burgerInfo}}</p>
+                    </div>
+                    <div class="col-2 py-1">
+                        <button class=" btn btn-sm btn-secondary eatenBurgerButton" disabled>Eat Burger</button>
+                    </div>
                 </div>
+                {{/each}}
             </div>
-            {{/each}}
-            <hr>
-            {{#each eatenBurgers}}
-            <div class="row">
-                <div class="col-4">
-                    {{this.burgerInfo}}
-                </div>
-                <div class="col-2 py-1">
-                    <button class=" btn btn-sm btn-secondary eatenBurgerButton" disabled>Eat Burger</button>
-                </div>
-            </div>
-            {{/each}}
         </div>
 
     </div>
